# OS

ex1/: Makefile  README  main.cpp  osm.cpp  osm.h  sandbox.cpp
ex2/: CMakeLists.txt  Makefile  Manager.cpp  README  Scheduler.cpp  demo_itimer.c  tests_to_be_ran_separately.cpp  uthreads.cpp
ex3/: CMakeLists.txt  Makefile  MapReduceFramework.cpp  MapReduceFramework.h  README  SampleClient.cpp
ex3/Atomic/: atomicdemo  atomicdemo.cpp  atomicdemo_multivar  atomicdemo_multivar.cpp
ex3/Sample Client/: SampleClient.cpp
ex4/: CMakeLists.txt  Makefile  README  SimpleTest.cpp  VirtualMemory.cpp
